# encoding-and-encrypiton

./: .gitignore  Cargo.toml  LICENSE  README.md
archiver/: Cargo.toml  README.md
archiver/src/: codes.rs  decoder.rs  encoder.rs  freq_map.rs  huffman.rs  io.rs  lib.rs  shannon_fano.rs  state_saver.rs  utils.rs
archiver/src/huffman/: decoder.rs  huffman_tree.rs
archiver/src/io/: choice_encoder.rs
efficient-encoding/: Cargo.toml
efficient_encoding/: Cargo.toml  README.md
efficient_encoding/src/: huffman.rs  io.rs  lib.rs  main.rs  shannon_fano.rs
pseudorandom/: Cargo.toml  README.md  plot.py
pseudorandom/src/: extensions.rs  lcg.rs  lib.rs  metrics.rs  prng_ext.rs  random_seed.rs  xorshift.rs
qr_code_generator/: Cargo.toml  LICENSE-QRCODE-RUST.md  LICENSE-THIRD-PARTY.md  README.md
qr_code_generator/src/: barcode.rs  code128.rs  gf.rs  lib.rs  qrcode.rs  reed_solomon.rs  utils.rs
qr_code_generator/src/barcode/: characters.rs  code128.rs  code_set.rs
qr_code_generator/src/barcode/code128/: characters.rs  code_set.rs  unit.rs
qr_code_generator/src/code128/: characters.rs
qr_code_generator/src/gf/: fast_gf256.rs  simple_gf256.rs
qr_code_generator/src/gf/tests/: poly_operations.rs
qr_code_generator/src/qrcode/: blocks.rs  draw.rs  rs_encoder.rs  tables.rs  types.rs
qr_code_generator/src/qrcode/types/: canvas.rs  correction_level.rs  mask.rs  module.rs  version.rs
qr_code_generator/src/reed_solomon/tests/: build_gen_poly.rs  decode.rs  encode.rs  error_locator.rs  locator.rs  syndromes.rs  utils.rs
reed_solomon/: Cargo.toml  README.md
reed_solomon/src/: coder_trait.rs  gf.rs  lib.rs  reed_solomon.rs
reed_solomon/src/gf/: fast_gf256.rs  simple_gf256.rs
reed_solomon/src/gf/tests/: arithmetic_operations.rs  poly_operations.rs
reed_solomon/src/reed_solomon/tests/: build_gen_poly.rs  encode.rs  locator.rs  positions.rs  syndromes.rs
reed_solomon_bin/: Cargo.toml  README.md
reed_solomon_bin/src/: main.rs
