[package]
name = "archiver"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "efficient_encoding"
path = "src/bin/efficient_encoding.rs"

[[bin]]
name = "huffman_encoder"
path = "src/bin/huffman_encoder.rs"

[[bin]]
name = "huffman_decoder"
path = "src/bin/huffman_decoder.rs"

[dependencies]
anyhow = "1.0.100"
humansize = "2.1.3"
