[package]
name = "pseudorandom"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "pseudorandom"
path = "src/bin/pseudorandom.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.52", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
rand = "0.9.2"
rstest = "0.26.1"
