[package]
name = "qr_code_generator"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "reed_solomon"
path = "src/bin/reed_solomon.rs"

# TODO: зависимость исполняемого файла не должна быть в библиотеке. Для этого надо выносить в отдельный crate.
[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
hex = "0.4.3"

[dev-dependencies]
pretty_assertions = "1.4.1"
rand = "0.9.2"
