[package]
name = "qr_code_generator"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "generator"
path = "src/bin/generator.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.52", features = ["derive"] }
image = "0.25.9"
reed_solomon = { version = "0.1.0", path = "../reed_solomon" }
strum = { version = "0.27.2", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
rand = "0.9.2"
rstest = "0.26.1"
